--- a/MIT-2.29-1.ipynb
+++ b/MIT-2.29-1.ipynb
@@ -5,7 +5,15 @@
    "id": "46e90a47-082b-4eb3-9c6f-ddce64991c7e",
    "metadata": {},
    "source": [
-    "# MIT 2.29 Problem Set 1"
+    "# MIT 2.29 Numerical Fluid Mechanics, Problem Set 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5e0706f3-4a8d-4236-98cf-3cb3acf4259d",
+   "metadata": {},
+   "source": [
+    "MIT OCW Course [website](https://ocw.mit.edu/courses/mechanical-engineering/2-29-numerical-fluid-mechanics-spring-2015/index.htm)"
    ]
   },
   {
@@ -13,12 +21,21 @@
    "id": "3723d8b1-7d97-4bb8-adeb-9c7071cb29a2",
    "metadata": {},
    "source": [
-    "## Problem 2"
+    "## Problem 2\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cf0acb0c-36ed-44d3-817f-736cc960f648",
+   "metadata": {},
+   "source": [
+    "<img src='imgs/PS1_2_1.jpeg'>\n",
+    "<img src='imgs/PS1_2_2.jpeg'>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "d386bb5a-499c-4385-b942-e6f427a90ca7",
    "metadata": {},
    "outputs": [],
@@ -28,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "id": "2477ea67-3d3c-41eb-99c0-4ca7ab88a400",
    "metadata": {},
    "outputs": [],
@@ -89,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 5,
    "id": "2b4096b1-03c0-49f9-b9e5-661eda61a7cb",
    "metadata": {},
    "outputs": [],
@@ -150,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 6,
    "id": "2808559e-fa2e-45ff-891d-6637f6523eca",
    "metadata": {},
    "outputs": [
@@ -178,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 7,
    "id": "fdecf33e-0315-4b5a-9208-ddee01fa5d43",
    "metadata": {},
    "outputs": [
@@ -188,7 +205,7 @@
        "array([[105., 105.]])"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -199,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 8,
    "id": "fdc3500b-c171-43bf-ba47-99a479a1b120",
    "metadata": {},
    "outputs": [],
@@ -247,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 14,
    "id": "174da494-19cd-4a19-8b9c-bcdf7973fdc8",
    "metadata": {},
    "outputs": [
@@ -255,7 +272,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/vx/p2vsss_n7nl9_h99z877fz440000gn/T/ipykernel_33629/742531342.py:13: RuntimeWarning: invalid value encountered in log10\n",
+      "/var/folders/vx/p2vsss_n7nl9_h99z877fz440000gn/T/ipykernel_34020/742531342.py:13: RuntimeWarning: invalid value encountered in log10\n",
       "  return zt != 0 and np.log10(zt) >=n\n"
      ]
     }
@@ -264,17 +281,21 @@
     "temp1 = np.zeros((len(y), len(x)))\n",
     "temp2 = np.zeros((len(y), len(x)))\n",
     "\n",
-    "for idx_x, xi in enumerate(x):\n",
-    "    for idx_y, yi in enumerate(y):\n",
-    "        temp1[idx_y, idx_x] = Txy(xi, yi, N, a, b, T1, fwd=True)\n",
-    "        temp2[idx_y, idx_x] = Txy(xi, yi, N, a, b, T1, fwd=False)\n",
-    "        \n",
-    "        "
+    "def find_temp(x, y, N, a, b, T1, fwd):\n",
+    "\n",
+    "    t = np.zeros((len(y), len(x)))\n",
+    "    for idx_x, xi in enumerate(x):\n",
+    "        for idx_y, yi in enumerate(y):\n",
+    "            t[idx_y, idx_x] = Txy(xi, yi, N, a, b, T1, fwd=fwd)\n",
+    "    return t\n",
+    "\n",
+    "temp1 = find_temp(x, y, N, a, b, T1, True)\n",
+    "temp2 = find_temp(x, y, N, a, b, T1, False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 15,
    "id": "e90ca251-5343-4799-9230-9c82c0a64985",
    "metadata": {},
    "outputs": [
@@ -282,13 +303,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/vx/p2vsss_n7nl9_h99z877fz440000gn/T/ipykernel_33629/2915868501.py:6: RuntimeWarning: divide by zero encountered in log10\n",
+      "/var/folders/vx/p2vsss_n7nl9_h99z877fz440000gn/T/ipykernel_34020/2915868501.py:6: RuntimeWarning: divide by zero encountered in log10\n",
       "  np.ceil(np.log10(sz*z*(1+10**(-(n+1)))))\n",
-      "/var/folders/vx/p2vsss_n7nl9_h99z877fz440000gn/T/ipykernel_33629/2915868501.py:13: RuntimeWarning: divide by zero encountered in log10\n",
+      "/var/folders/vx/p2vsss_n7nl9_h99z877fz440000gn/T/ipykernel_34020/2915868501.py:13: RuntimeWarning: divide by zero encountered in log10\n",
       "  return np.logical_and(zt != 0, np.log10(zt) >=n)\n",
-      "/var/folders/vx/p2vsss_n7nl9_h99z877fz440000gn/T/ipykernel_33629/2915868501.py:13: RuntimeWarning: invalid value encountered in log10\n",
+      "/var/folders/vx/p2vsss_n7nl9_h99z877fz440000gn/T/ipykernel_34020/2915868501.py:13: RuntimeWarning: invalid value encountered in log10\n",
       "  return np.logical_and(zt != 0, np.log10(zt) >=n)\n",
-      "/var/folders/vx/p2vsss_n7nl9_h99z877fz440000gn/T/ipykernel_33629/2915868501.py:46: RuntimeWarning: divide by zero encountered in log10\n",
+      "/var/folders/vx/p2vsss_n7nl9_h99z877fz440000gn/T/ipykernel_34020/2915868501.py:46: RuntimeWarning: divide by zero encountered in log10\n",
       "  np.logical_and(sc!=0 , np.log10(sc * ct) >= n),\n"
      ]
     }
@@ -300,7 +321,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 19,
+   "id": "5e0fa59a-4d52-4070-82c7-d3d491fdbd74",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([[ True,  True,  True, ...,  True,  True,  True],\n",
+       "        [ True,  True,  True, ...,  True,  True,  True],\n",
+       "        [ True,  True,  True, ...,  True,  True,  True],\n",
+       "        ...,\n",
+       "        [ True,  True,  True, ...,  True,  True,  True],\n",
+       "        [ True,  True,  True, ...,  True,  True,  True],\n",
+       "        [ True,  True,  True, ...,  True,  True,  True]]),\n",
+       " array([[ True,  True,  True, ...,  True,  True,  True],\n",
+       "        [ True,  True,  True, ...,  True,  True,  True],\n",
+       "        [ True,  True,  True, ...,  True,  True,  True],\n",
+       "        ...,\n",
+       "        [ True,  True, False, ...,  True, False,  True],\n",
+       "        [ True,  True, False, ...,  True,  True, False],\n",
+       "        [ True, False, False, ..., False, False, False]]))"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(temp1 == temp1_vec).all(), (temp1 == temp2_vec).all(), temp1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "id": "efac3744-43bb-4120-b81a-2ced75355671",
    "metadata": {},
    "outputs": [],
@@ -336,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 17,
    "id": "53362b18-e1d3-4d52-9e91-25356e6e0769",
    "metadata": {},
    "outputs": [
@@ -359,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 18,
    "id": "faad3f82-3139-4ab2-9a2d-0a849d0cfe6c",
    "metadata": {},
    "outputs": [
@@ -378,6 +433,16 @@
    ],
    "source": [
     "plot_surfs(x, y, [temp1_vec - temp2_vec, temp2_vec - temp1_vec])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "59a540b9-582d-413c-9a4f-d485e107163b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%timeit "
    ]
   }
  ],
